deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: otus-sample-service
spec:
  selector:
    app: otus-sample-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-sample-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-sample-app
  template:
    metadata:
      labels:
        app: otus-sample-app
    spec:
      containers:
      - name: otus-sample
        image: docker.io/vndovr/otus-sample:v3
        ports:
          - name: web
            containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 5
          periodSeconds: 5
