service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-sample-service
spec:
  selector:
    app: otus-sample-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
