ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:                      
      paths:
        - path: /otusapp/([^/]*)/(.*)
          pathType: Prefix
          backend:
            service:
              name: otus-sample-service
              port:
                number: 8000
        - path: /()(.*)
          pathType: Prefix
          backend:
            service:
              name: otus-sample-service
              port:
                number: 8000
